# test_task_for_Keymakr

./: .gitignore  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
src/application/: config.py
src/application/shared/: app_factory.py  asgi.py  celery.py  tasks.py
src/application/shared/dependency_injection/: persistence.py  use_case.py
src/application/shared/ml/: pipeline.py
src/domain/entities/: tasks.py  users.py
src/interfaces/api/fetch/: users.py
src/interfaces/api/routers/: ml.py  tasks.py  users.py
src/interfaces/api/schemas/: ml.py  tasks.py
src/persistence/gateway/: abc.py  tasks.py
src/persistence/gateway/CSV/: users.py
src/persistence/gateway/ml/: joblib_model.py
src/persistence/mapper/: abc.py  tasks.py
src/persistence/mapper/CSV/: users.py
src/persistence/repository/: abc.py  tasks.py
src/persistence/repository/CSV/: users.py
src/use_cases/: abc.py
src/use_cases/ml/predict/: ports.py  use_case.py
src/use_cases/ml/train/: ports.py  use_case.py
src/use_cases/tasks/create/: ports.py  use_case.py
src/use_cases/tasks/delete/: ports.py  use_case.py
src/use_cases/tasks/get_list/: ports.py  use_case.py
src/use_cases/tasks/update/: ports.py  use_case.py
src/use_cases/users/save/: ports.py  use_case.py
tools/docker/: app.dockerfile
