[project]
name = "test-task-for-keymakr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5.3",
    "fastapi>=0.116.1",
    "joblib>=1.5.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "redis>=5.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "uvicorn[standard]>=0.35.0",
]
